feat: simple rest api

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "nodemon --exec babel-node --presets es2015 src/main/server.js"
+    "start": "nodemon --exec babel-node --presets es2015 src/main/server.js",
+    "execute": "babel-node --presets es2015 src/presentation/bash"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
